force-app/main/default/objects/Meeting_Date__c/Meeting_Date__c.object-meta.xml
<CustomObject>
    <description>Master list of all available meeting dates of Ethics Applicaitions</description>
    <label>Meeting Date</label>
    <nameField>
        <label>Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Dates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>