force-app/main/default/objects/Meeting_Date__c/fields/I_RS_Chair_Person__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Chair_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chair</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Meeting Dates</relationshipLabel>
    <relationshipName>Meeting_Dates</relationshipName>
    <type>Lookup</type>
</CustomField>