force-app/main/default/objects/Meeting_Date__c/fields/I_RS_Committee__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Committee__c</fullName>
    <label>Committee</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AEC</fullName>
            </value>
            <value>
                <fullName>AEC Executive</fullName>
            </value>
            <value>
                <fullName>IBC</fullName>
            </value>
            <value>
                <fullName>IBC Executive Incidents</fullName>
            </value>
            <value>
                <fullName>HREC A</fullName>
            </value>
            <value>
                <fullName>HREC B</fullName>
            </value>
            <value>
                <fullName>HREC Executive</fullName>
            </value>
            <value>
                <fullName>Low Risk</fullName>
            </value>
            <value>
                <fullName>Low Risk Executive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>