force-app/main/default/objects/Meeting_Date__c/fields/I_RS_Expired__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Expired__c</fullName>
    <formula>IF(I_RS_Meeting_Date__c &lt; TODAY(), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expired</label>
    <type>Checkbox</type>
</CustomField>