force-app/main/default/objects/Meeting_Date__c/fields/I_RS_General_Comments__c.field-meta.xml
<CustomField>
    <fullName>I_RS_General_Comments__c</fullName>
    <label>General Business</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>