force-app/main/default/objects/Meeting_Date__c/fields/I_RS_Meeting_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Meeting_Closing_Date__c</fullName>
    <label>Meeting Closing Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>