force-app/main/default/objects/Meeting_Date__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Animal Ethics Application</fullName>
            </value>
            <value>
                <fullName>Human Ethics Application</fullName>
            </value>
            <value>
                <fullName>Biosafety Ethics Application</fullName>
                <label>IBC Ethics Application</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>