force-app/main/default/objects/Meeting_Date__c/listViews/All_Meeting_Dates.listView-meta.xml
<ListView>
    <fullName>All_Meeting_Dates</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Meeting_Date__c</columns>
    <columns>I_RS_Meeting_Closing_Date__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Meeting Dates</label>
</ListView>