force-app/main/default/objects/Meeting_Date__c/listViews/Future_Meeting_Dates.listView-meta.xml
<ListView>
    <fullName>Future_Meeting_Dates</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Meeting_Date__c</columns>
    <columns>I_RS_Meeting_Closing_Date__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>I_RS_Meeting_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Future Meeting Dates</label>
</ListView>