force-app/main/default/objects/Meeting_Date__c/listViews/Human_Research_Ethics_Committee.listView-meta.xml
<ListView>
    <fullName>Human_Research_Ethics_Committee</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Meeting_Date__c</columns>
    <columns>I_RS_Meeting_Closing_Date__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>I_RS_Committee__c</field>
        <operation>equals</operation>
        <value>HREC A,HREC B,HREC Executive</value>
    </filters>
    <filters>
        <field>I_RS_Meeting_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Human Research Ethics Committee</label>
</ListView>