force-app/main/default/objects/Meeting_Date__c/listViews/Institutional_Biosafety_Committee.listView-meta.xml
<ListView>
    <fullName>Institutional_Biosafety_Committee</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Meeting_Date__c</columns>
    <columns>I_RS_Meeting_Closing_Date__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>I_RS_Committee__c</field>
        <operation>equals</operation>
        <value>IBC,IBC Executive Incidents</value>
    </filters>
    <filters>
        <field>I_RS_Meeting_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Institutional Biosafety Committee</label>
</ListView>