force-app/main/default/objects/Meeting_Date__c/listViews/Low_Risk_Sub_Committee.listView-meta.xml
<ListView>
    <fullName>Low_Risk_Sub_Committee</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Meeting_Date__c</columns>
    <columns>I_RS_Meeting_Closing_Date__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>I_RS_Committee__c</field>
        <operation>equals</operation>
        <value>Low Risk,Low Risk Executive</value>
    </filters>
    <filters>
        <field>I_RS_Meeting_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Low Risk Sub-Committee</label>
</ListView>